--- a/.css
+++ b/.css
@@ -1,1 +1,17 @@
-
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+a {
+  text-decoration: none;
+  color: #22f;
+}
+a:active {
+  color: #f20;
+}
+a:hover {
+  text-decoration: underline;
+}
+a:visited {
+  color: f2f;
+}
+p, h1, h2, h3, h4, h5, h6, li, td, a {
+  font-family: Helvetica, Roboto;
+}
