--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ a:hover {
   text-decoration: underline;
 }
 a:visited {
-  color: #f0f;
+  color: #b0f;
 }
 p, h1, h2, h3, h4, h5, h6, li, td, a {
   font-family: Helvetica, Roboto;
