--- a/main.css
+++ b/main.css
@@ -1,4 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
+div.main {
+  margin-left: 100px;
+}
 a {
   text-decoration: none;
   color: #22f;
