--- a/main.css
+++ b/main.css
@@ -1,10 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 div#gooleplus {
   width: 60px;
-  height: 28px;
+  float: left;
+  background-color: LightYellow;
 }
 div#main {
-  margin-left: 65px;
+  margin-left: 75px;
+  
 }
 a {
   text-decoration: none;
