--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 div#gooleplus {
   width: 60px;
-  float: left;
+  display: inline-block;
   background-color: LightYellow;
 }
 div#main {
   margin-left: 75px;
-  
+  display: inside-block;
 }
 a {
   text-decoration: none;
